--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "dateio",
-  "version": "1.1.6",
+  "version": "1.1.9",
   "description": "A lightweight JavaScript date library for display and formatting dates.",
   "main": "index.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "date",
@@ -18,5 +18,10 @@
   ],
   "author": "Tyler Chao",
   "license": "MIT",
-  "repository": "cz848/dateio"
+  "repository": "cz848/dateio",
+  "devDependencies": {
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "mockdate": "^2.0.5",
+    "moment": "^2.24.0"
+  }
 }
