--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "coverage": "open ./coverage/lcov-report/index.html"
   },
   "keywords": [
     "date",
