--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "dateio",
-  "version": "1.1.6",
+  "version": "1.3.0",
   "description": "A lightweight JavaScript date library for display and formatting dates.",
   "main": "index.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint index.js",
+    "lint:jest": "eslint test/",
+    "test": "jest",
+    "coverage": "open ./coverage/lcov-report/index.html"
   },
   "keywords": [
     "date",
@@ -18,5 +21,15 @@
   ],
   "author": "Tyler Chao",
   "license": "MIT",
-  "repository": "cz848/dateio"
+  "repository": "cz848/dateio#get",
+  "devDependencies": {
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "mockdate": "^2.0.5",
+    "moment": "^2.24.0"
+  }
 }
