--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,19 @@
 {
-  "env":
-  {
-    "test":
-    {
+  "env": {
+    "test": {
       "plugins": ["transform-es2015-modules-commonjs"]
+    },
+    "build": {
+      "presets": [
+        ["@babel/preset-env", {
+          "targets": {
+            "browsers": ["> 1%", "last 2 versions"]
+          },
+          // "useBuiltIns": "usage",
+          "modules": false,
+          "loose": true
+        }]
+      ]
     }
   }
 }
