--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "moment": "^2.24.0",
     "rollup": "^2.22.1",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-uglify": "^6.0.4",
+    "rollup-plugin-terser": "^6.1.0",
     "size-limit": "^4.5.5"
-  }
+  },
+  "dependencies": {}
 }
