--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dateio",
-  "version": "1.3.6",
+  "version": "1.3.6-0",
   "description": "A lightweight JavaScript date library for display and formatting dates.",
   "main": "index.js",
   "directories": {
