--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-jest": "^23.18.0",
     "eslint-plugin-promise": "^4.2.1",
     "gzip-size-cli": "^3.0.0",
+    "jest": "^28.1.3",
     "mockdate": "^2.0.5",
     "moment": "^2.24.0",
     "rollup": "^2.22.1",
