--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^23.18.0",
     "eslint-plugin-promise": "^4.2.1",
+    "jest": "^28.1.3",
     "mockdate": "^2.0.5",
     "moment": "^2.24.0"
   }
